--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>
-  {{title}}
-</h1>
+<div class="icon-bar">
+    <a routerLink="/home" routerLinkActive="active"><i class="fa fa-home"></i>Home</a>
+    <a routerLink="/courses" routerLinkActive="active"><i class="fa fa-folder"></i>Courses</a>
+    <a routerLink="/teachers" routerLinkActive="active"><i class="fa fa-users"></i>Teachers</a>
+    <a routerLink="/home"><i class="fa fa-thumbs-o-up"></i></a>
+</div>
+<router-outlet></router-outlet>
